--- a/ProfileMatch.Components/Admin/AdminMaintenance.razor
+++ b/ProfileMatch.Components/Admin/AdminMaintenance.razor
@@ -12,7 +12,7 @@
             </MudSelect>
             <br />
             <MudButton HtmlTag="label"
-                       Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)"
+                       Color="Color.Primary"
                        Variant="Variant.Outlined"
                        Size="Size.Small"
                        StartIcon="@Icons.Custom.FileFormats.FileExcel"
