--- a/ProfileMatch.Components/Layout/MainLayout.razor
+++ b/ProfileMatch.Components/Layout/MainLayout.razor
@@ -14,10 +14,10 @@
                         <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs">
-                        <MudText Typo="Typo.h6" Class="ml-4">@L["People Match"]</MudText>
+                        <MudText Typo="Typo.h6" Class="ml-4">Profile Match</MudText>
                     </MudHidden>
                     <MudHidden Breakpoint="Breakpoint.Xs" Invert="true">
-                        <MudText Typo="Typo.subtitle2">@L["People Match"]</MudText>
+                        <MudText Typo="Typo.subtitle2">Profile Match</MudText>
                     </MudHidden>
                     <MudSpacer />
                     <CultureSelector />
@@ -57,7 +57,7 @@
                             }
                         </MudToolBar>
                     </MudHidden>
-                    <CascadingValue Value="CurrentUser">
+                    <CascadingValue Value="CurrentUser" Name="CurrentUser">
                         @Body
                     </CascadingValue>
                 </MudMainContent>
