--- a/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
+++ b/ProfileMatch.Components/User/UserClosedQuestionsTable.razor
@@ -51,7 +51,7 @@ else
             <Column Field="Level" T="QuestionUserLevelVM" Title=@L["Answer"] />
             <Column Sortable="false" T="QuestionUserLevelVM" Title=@L["Actions"]>
                 <CellTemplate>
-                    <MudButton Size="Size.Small" Variant="Variant.Outlined" Style="color: var(--mud-palette-info-darken)!important; border-color: var(--mud-palette-info-darken)" OnClick="@(()=>UserAnswerDialog(context))">@L["Edit Answer"]</MudButton>
+                    <MudButton Size="Size.Small" Variant="Variant.Outlined" Color="Color.Primary" OnClick="@(()=>UserAnswerDialog(context))">@L["Edit Answer"]</MudButton>
                 </CellTemplate>
             </Column>
         </Columns>
