--- a/ProfileMatch.Components/Dialogs/AdminLevelDialog.razor
+++ b/ProfileMatch.Components/Dialogs/AdminLevelDialog.razor
@@ -5,7 +5,7 @@
         </MudForm>
     </DialogContent>
     <DialogActions>
-        <MudButton Size="Size.Small" Style="color: var(--mud-palette-warning)!important; border-color: var(--mud-palette-warning)" Variant="Variant.Outlined" OnClick="Cancel">@L["Cancel"]</MudButton>
+        <MudButton Size="Size.Small" Color="Color.Warning" Variant="Variant.Outlined" OnClick="Cancel">@L["Cancel"]</MudButton>
         <MudButton Variant="Variant.Outlined" StartIcon="@Icons.Material.Filled.Save" Color="Color.Success"  Size="Size.Small" OnClick="HandleSave">@L["Save"]</MudButton>
     </DialogActions>
 </MudDialog>
